--- a/appspec.yml
+++ b/appspec.yml
@@ -4,15 +4,12 @@ files:
   - source: /index.html
     destination: /var/www/html
 hooks:
-  BeforeInstall:
+  AfterInstall:
     - location: scripts/install_dependencies.sh
       timeout: 300
       runas: root
+  ApplicationStart:
     - location: scripts/start_server.sh
-      timeout: 300
-      runas: root
-  ApplicationStop:
-    - location: scripts/stop_server.sh
       timeout: 300
       runas: root
 
